examples/ill_formed/dangling_condition.crn
crn = {
    conc[a, a0],
    conc[b, b0],
    step[{
        ld[a, atmp],
        ld[b, btmp],
        cmp[a,b]
    }],
    step[{
        ifGT[{ sub[atmp, btmp, a] }],
        ifLE[{ sub[btmp, atmp, b] }],
        sub[a, b, c]
    }]
}